@@ -107,7 +107,6 @@
 
 /examples/assert
 /examples/cmdline
-/examples/generic_file
 /examples/generic_malloc
 /examples/generic_mutex
 /examples/macro_bits
