@@ -31,7 +31,6 @@ libkernaux_la_LIBADD =
 libkernaux_la_SOURCES = \
 	src/assert.c \
 	src/libc.h \
-	src/generic/file.c \
 	src/generic/malloc.c \
 	src/generic/mutex.c
 
