@@ -7,7 +7,6 @@
 #include <kernaux/macro.h>
 #include <kernaux/version.h>
 
-#include <kernaux/generic/file.h>
 #include <kernaux/generic/malloc.h>
 #include <kernaux/generic/mutex.h>
 
